# xai-gnn-hdr2

./: .gitignore  GNN_training_utils.py  analyse_results.ipynb  apply_binary_graph_task.py  configuration.json  del.ipynb  eval_gnns.py  evaluate_explainers.py  evaluate_models.py  explaination_pipeline.sh  generate_MUTAG.ipynb  generate_MUTAG.py  model_pipeline.sh  models.py  pipeline.py  pyproject.toml  run_explainers.py  setup_ogx_datasets.py  train_graph_classifiers.py  train_inductive_graph_classifier.py  train_models.py  train_ogx.py  train_rw_graph_task.py  train_transductive_node_classifer.py  training_utils.py
.env/: pyvenv.cfg
explainability/: evaluate.py  explainer_utils.py  run_explainers.py  xAI_utils.py
explainability/baselines/: ORExplainer.py  PGExplainer.py  ProxyExplainer.py
explanations/: MUTAG_ground_truth.py  eval_explanations.py  explainer_pipeline.py  xAI_pipeline.py  xAI_utils.py
model_training/: GNN_training_utils.py  eval_GNNs.py  models.py  train_inductive_graph_classifier.py  train_transductive_node_classifer.py
notebooks/: debug_12_07.ipynb  eda_explanations_07_23_26.ipynb  model_results_20_6_2025.ipynb  ogx_setup.ipynb  process_synth_graphlevel_datasets.ipynb
notebooks_archive/: graphXAI_eda.ipynb  train_multiclass_transductive_classifiers.py  train_ogx.py
scripts/: create_datasets.sh  evaluate_explainers.py  evaluate_models.py  explanation_pipeline.py  run_explainers.py  train_models.py
training/: GNN_utils.py  evaluate.py  models.py  setup_ogx_datasets.py  synth_motifs_generation.py  train_models.py
(+165 files in other folders)
