[project]
name = "xai-gnn-hdr2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "hydra-core>=1.3.3",
    "kneed>=0.8.6",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
